syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";

service UserService {
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
  rpc GetUserById (GetUserByIdRequest) returns (UserMessage);
  rpc GetUserByUsername (GetUserByUsernameRequest) returns (UserMessage);
  rpc GetUserByEmail (GetUserByEmailRequest) returns (UserMessage);
  rpc CreateUser (CreateUserRequest) returns (UserMessage);
  rpc UpdateUserById (UpdateUserByIdRequest) returns (UserMessage);
  rpc UpdateUserByUsername (UpdateUserByUsernameRequest) returns (UserMessage);
}

message GetUsersRequest {
  int32 page = 1;
  int32 per_page = 2;
}

message GetUsersResponse {
  repeated UserMessage users = 1;
}

message GetUserByIdRequest {
  int32 id = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message CreateUserRequest {
  UserMessage user = 1;
}

message UpdateUserByIdRequest {
  int32 id = 1;
  UserMessage user = 2;
}

message UpdateUserByUsernameRequest {
  string username = 1;
  UserMessage user = 2;
}

message UserMessage {
  int32 id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
  string first_name = 5;
  string last_name = 6;
  RoleMessage role = 7;
  AreaMessage area = 8;
  google.protobuf.Timestamp created_at = 9;
  string created_by = 10;
  google.protobuf.Timestamp updated_at = 11;
  string updated_by = 12;
}

message RoleMessage {
  int32 id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  string created_by = 5;
  google.protobuf.Timestamp updated_at = 6;
  string updated_by = 7;
}

message AreaMessage {
  int32 id = 1;
  string name = 2;
  string description = 3;
  DepartmentMessage department = 4;
  google.protobuf.Timestamp created_at = 5;
  string created_by = 6;
  google.protobuf.Timestamp updated_at = 7;
  string updated_by = 8;
}

message DepartmentMessage {
  int32 id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  string created_by = 5;
  google.protobuf.Timestamp updated_at = 6;
  string updated_by = 7;
}
